--- a/structure.html
+++ b/structure.html
@@ -10,22 +10,14 @@
       <h1>Comp 484</h1>
       <h2>Structuring Pages</h2>
       <nav role="navigation">
-        <p>
-          <a href="index.html" title="Introduction to HTML"
-            >Introduction to HTML</a
-          >
-        </p>
-        <p><a href="syntax.html" title="HTML syntax">HTML syntax</a></p>
-        <p>
-          <a href="structure.html" title="Structuring pages"
-            >Structuring pages</a
-          >
-        </p>
-        <p><a href="links.html" title="Creating links">Creating links</a></p>
-        <p>
-          <a href="reference.html" title="HTML Reference">HTML reference</a>
-        </p>
-        <p><a href="next.html" title="Next steps">Next steps</a></p>
+        <ul>
+          <li href="index.html" title="Introduction to HTML">Introduction to HTML</a>
+          <li href="syntax.html" title="HTML syntax">HTML syntax</a>
+          <li href="structure.html" title="Structuring pages">Structuring pages</a>
+          <li href="links.html" title="Creating links">Creating links</a>
+          <li href="reference.html" title="HTML Reference">HTML reference</a>
+          <li href="next.html" title="Next steps">Next steps</a>
+        </ul>
       </nav>
     </header>
     <main role="main">
