--- a/reference.html
+++ b/reference.html
@@ -11,12 +11,12 @@
       <h2>HTML Reference</h2>
       <nav role="navigation">
         <ul>
-          <li href="index.html" title="Introduction to HTML">Introduction to HTML</a>
-          <li href="syntax.html" title="HTML syntax">HTML syntax</a>
-          <li href="structure.html" title="Structuring pages">Structuring pages</a>
-          <li href="links.html" title="Creating links">Creating links</a>
-          <li href="reference.html" title="HTML Reference">HTML reference</a>
-          <li href="next.html" title="Next steps">Next steps</a>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a></li>
+          <li><a href="syntax.html" title="HTML syntax">HTML syntax</a></li>
+          <li><a href="structure.html" title="Structuring pages">Structuring pages</a></li>
+          <li><a href="links.html" title="Creating links">Creating links</a></li>
+          <li><a href="reference.html" title="HTML Reference">HTML reference</a></li>
+          <li><a href="next.html" title="Next steps">Next steps</a></li>
         </ul>
       </nav>
     </header>
