--- a/reference.html
+++ b/reference.html
@@ -31,54 +31,55 @@
         </header>
         <section>
           <h3>HTML Terms</h3>
-          <p>Attribute</p>
+          <ul>
+          <li><p>Attribute</p>
           <p>
             An HTML element property that provides additional information or
             functionality for an element. Attributes appear as a name/value pair
             with the value contained in quotation marks.
           </p>
-          <p>Block-Level Element</p>
+          <li><p>Block-Level Element</p>
           <p>
             HTML tags that create blocks of content within the document such as
             headings and paragraphs. Block-level elements typically stack one on
             top of each other based on the order they appear in the code.
           </p>
-          <p>Child Element</p>
+          <li><p>Child Element</p>
           <p>
             Any HTML element that is contained inside another HTML element.
             Child element tags must close before their parent element tags.
           </p>
-          <p>Closing Tag</p>
+          <li><p>Closing Tag</p>
           <p>
             Appears after an element&rsquo;s content and indicates the end of an
             element. Is identical to an element&rsquo;s opening tag with the
             addition of a forward slash (/) prior to the tag&rsquo;s character.
           </p>
-          <p>Comment</p>
+          <li><p>Comment</p>
           <p>
             Reference information added to the code. May include an overview of
             more complex code, a reminder for future authors, or communications
             within a team.
           </p>
-          <p>CMS</p>
+          <li><p>CMS</p>
           <p>
             CMS is short for <b>Content Management System</b>, and refers to any
             system designed to allow users to create and maintain content. For
             the web, it primarily refers to software designed to manage web
             sites and their content. Examples include Joomla! and WordPress.
           </p>
-          <p>CSS</p>
+          <li><p>CSS</p>
           <p>
             Cascading Style Sheets (CSS)is a presentation language used to
             control the presentation and layout of web pages.
           </p>
-          <p>Doctype</p>
+          <li><p>Doctype</p>
           <p>
             Short for <b>Document Type Declaration</b>. Appears at the top of
             all HTML documents to trigger standards mode and identifies the
             version of HTML used by the document.
           </p>
-          <p>DOM</p>
+          <li><p>DOM</p>
           <p>
             The DOM, or <b>Document Object Model</b>, is a representation of
             documents like HTML. The DOM can be thought of as an outline where
@@ -86,73 +87,74 @@
             like JavaScript reference the DOM when accessing or modifying page
             content.
           </p>
-          <p>Elements</p>
+          <li><p>Elements</p>
           <p>
             HTML elements consist of an HTML tag, used to identify the content,
             and the content itself. Is often used interchangeably with the term
             &ldquo;tags&rdquo; although technically tags only refer to the tag
             itself.
           </p>
-          <p>FTP</p>
+          <li><p>FTP</p>
           <p>
             FTP stands for <b>File Transfer Protocol</b>. It&rsquo;s a common
             protocol used for transferring large files from one server to
             another.
           </p>
-          <p>HTTP</p>
+          <li><p>HTTP</p>
           <p>
             HTTP, or <b>Hypertext Transfer Protocol</b>, controls the formatting
             and transmission of HTML pages across web servers.
           </p>
-          <p>Inline-Level Elements</p>
+          <li><p>Inline-Level Elements</p>
           <p>
             Elements that appear within the normal flow of text. Unlike
             block-level elements, inline-level elements do not start new lines
             within the normal document flow.
           </p>
-          <p>JavaScript</p>
+          <li><p>JavaScript</p>
           <p>
             Scripting language developed by Netscape and used to control much of
             the functionality and behavior on the web.
           </p>
-          <p>Metadata</p>
+          <li><p>Metadata</p>
           <p>
             Additional information about the document or document content,
             typically stored in meta tags.
           </p>
-          <p>MIME Type</p>
+          <li><p>MIME Type</p>
           <p>
             Short for <b>Multipurpose Internet Mail Extension,</b> MIME types
             are used to tell user agents what type of program a file or
             extension is. Without a proper MIME type, user agents can have
             trouble properly running applications or processing files.
           </p>
-          <p>Parent Element</p>
+          <li><p>Parent Element</p>
           <p>
             An HTML element that contains another element. It is possible for an
             element to be a child of one element and the parent of another.
           </p>
-          <p>Replaced Element</p>
+          <li><p>Replaced Element</p>
           <p>
             Any HTML element where the contents of the element are replaced by
             something else. Examples would be images, video, or other plug-in
             content.
           </p>
-          <p>Tag</p>
+          <li><p>Tag</p>
           <p>
             Markup characters that indicate what type of content appear on the
             page. Most tags consist of both an opening and closing tag.
           </p>
-          <p>URL</p>
+          <li><p>URL</p>
           <p>
             URL stands for <b>Uniform Resource Locator</b>. It serves as the
             address of a document or other resource on the web.
           </p>
-          <p>W3C</p>
+          <li><p>W3C</p>
           <p>
             The W3C, or <b>World Wide Web Consortium</b>, is the standards body
             responsible for authoring the HTML specification.
           </p>
+          </ul>
         </section>
         <section>
           <table
